# PokeFu

./: About.qml  AboutForm.ui.qml  CMakeLists.txt  ExchangeCalculator.qml  ExchangeCalculatorForm.ui.qml  Home.qml  HomeForm.ui.qml  MyPokeball.qml  MyPokeballForm.ui.qml  PokeFu_pt_BR.ts  Pokedex.qml  PokedexForm.ui.qml  ScratchPad.qml  ScratchPadForm.ui.qml  main.cpp  main.qml  qml.qrc
android/: AndroidManifest.xml
windows/: PokeFu.rc
